# guest-test

./: .gitignore  Cargo.toml  build-aarch64.sh  build-x86_64.sh  clean.sh  release.sh  run-aarch64.sh  run-x86_64.sh  setup.sh
.github/workflows/: release.yml
src/: main.rs
